manifests/infrastructure/traefik/namespace.yaml
# manifests/infrastructure/traefik/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
